# perf-ninja

./: .gitignore  CMakeLists.txt  GetStarted.md  conanfile.py
labs/bad_speculation/branches_to_cmov_1/: CMakeLists.txt
labs/core_bound/compiler_intrinsics_2/: CMakeLists.txt
labs/core_bound/compiler_intrinsics_4/: CMakeLists.txt
labs/core_bound/dep_chains_2/: CMakeLists.txt
labs/memory_bound/false_sharing_1/: CMakeLists.txt
labs/memory_bound/loop_interchange_2/: CMakeLists.txt
labs/memory_bound/mem_order_violation_1/: CMakeLists.txt
labs/misc/io_opt1/: CMakeLists.txt
labs/misc/lto/: CMakeLists.txt
labs/misc/pgo/: CMakeLists.txt
tools/: check_speedup_build.py  check_speedup_run.py  labs.cmake
