cmake_minimum_required(VERSION 3.20)

project(perf-ninja)

find_package(fmt REQUIRED CONFIG)
find_package(benchmark REQUIRED CONFIG)

include(${CMAKE_SOURCE_DIR}/tools/labs.cmake)

add_subdirectory(labs/bad_speculation/branches_to_cmov_1)
add_subdirectory(labs/bad_speculation/conditional_store_1)
add_subdirectory(labs/bad_speculation/lookup_tables_1)
add_subdirectory(labs/bad_speculation/virtual_call_mispredict)
add_subdirectory(labs/core_bound/compiler_intrinsics_1)
add_subdirectory(labs/core_bound/compiler_intrinsics_2)
add_subdirectory(labs/core_bound/compiler_intrinsics_3)
add_subdirectory(labs/core_bound/compiler_intrinsics_4)
add_subdirectory(labs/core_bound/dep_chains_1)
add_subdirectory(labs/core_bound/dep_chains_2)
add_subdirectory(labs/core_bound/function_inlining_1)
add_subdirectory(labs/core_bound/vectorization_1)
add_subdirectory(labs/core_bound/vectorization_2)
add_subdirectory(labs/memory_bound/data_packing)
add_subdirectory(labs/memory_bound/false_sharing_1)
add_subdirectory(labs/memory_bound/huge_pages_1)
add_subdirectory(labs/memory_bound/loop_interchange_1)
add_subdirectory(labs/memory_bound/loop_interchange_2)
add_subdirectory(labs/memory_bound/loop_tiling_1)
add_subdirectory(labs/memory_bound/mem_alignment_1)
add_subdirectory(labs/memory_bound/mem_order_violation_1)
add_subdirectory(labs/memory_bound/swmem_prefetch_1)
add_subdirectory(labs/misc/io_opt1)
add_subdirectory(labs/misc/lto)
add_subdirectory(labs/misc/pgo)
add_subdirectory(labs/misc/warmup)